--- a/voteobserver-webrtc-ballotbox/src/main/webapp/index.html
+++ b/voteobserver-webrtc-ballotbox/src/main/webapp/index.html
@@ -50,53 +50,46 @@
 			nextRTC.leave();
 		};
 
-		var nextRTC = new NextRTC(
-				{
-					wsURL : 'wss://' + 'localhost:8083'
-							+ '/signaling',
-					mediaConfig : {
-						video : true,
-						audio : true,
-					},
-					peerConfig : {
-						iceServers : [ {
-							urls : "stun:23.21.150.121"
-						}, {
-							urls : "stun:stun.l.google.com:19302"
-						}, {
-							urls : "turn:numb.viagenie.ca",
-							credential : "webrtcdemo",
-							username : "louis@mozilla.com"
-						} ],
-						iceTransportPolicy : 'all',
-						rtcpMuxPolicy : 'negotiate'
-					}
-				});
+		var nextRTC = new NextRTC({
+			wsURL : 'wss://' + 'localhost:8083' + '/signaling',
+			mediaConfig : {
+				video : true,
+				audio : true,
+			},
+			peerConfig : {
+				iceServers : [ {
+					urls : "stun:23.21.150.121"
+				}, {
+					urls : "stun:stun.l.google.com:19302"
+				}, {
+					urls : "turn:numb.viagenie.ca",
+					credential : "webrtcdemo",
+					username : "louis@mozilla.com"
+				} ],
+				iceTransportPolicy : 'all',
+				rtcpMuxPolicy : 'negotiate'
+			}
+		});
 
-		nextRTC
-				.on(
-						'created',
-						function(nextRTC, event) {
-							console.log(JSON.stringify(event));
-							$('#log')
-									.append(
-											'<li>Room with id '
-													+ event.content
-													+ ' has been created, share it with your friend to start videochat</li>');
-						});
+		nextRTC.on('created', function(nextRTC, event) {
+			console.log(JSON.stringify(event));
+			$('#log').append(
+					'<li>Broadcast for Ballot Box No: ' + event.content
+							+ ' has been started.</li>');
+		});
 
 		nextRTC.on('joined', function(nextRTC, event) {
 			console.log(JSON.stringify(event));
 			$('#log').append(
-					'<li>You have been joined to conversation ' + event.content
+					'<li>You have been joined to observation ' + event.content
 							+ '</li>');
 		});
 
 		nextRTC.on('newJoined', function(nextRTC, event) {
 			console.log(JSON.stringify(event));
 			$('#log').append(
-					'<li>Member with id ' + event.from
-							+ ' has joined conversation</li>');
+					'<li>Citizen with id ' + event.from
+							+ ' is watching YOU!</li>');
 		});
 
 		nextRTC.on('localStream', function(member, stream) {
